# Agent-Specification

./: .gitignore  README.MD  agent-component-spacification.yaml  agent-component-specification.yaml  agent-specication.yaml  agent-specification.yaml  model.py  pyproject.toml  spec.md  validate_examples.py  validate_model.py
.github/workflows/: pr.yaml
examples/: health-care.yaml
sbin/: generate_model.sh  validate_model.sh
scripts/: generate_model.sh  validate_model.sh
