[project]
name = "agent-specification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openapi-core==0.19.4",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "datamodel-code-generator>=0.28.4",
    "rich>=13.9.4",
]

[tool.uv]
dev-dependencies = ["ruff>=0.11.0"]


[tool.ruff.format]
"quote-style" = "preserve"
